thy/Iptables_Semantics/Examples/IPPartEval/config_random_srv/iptables-save
# Generated by iptables-save v1.4.21 on Mon Nov 23 13:56:38 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 88,123 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 22,88,4949 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p tcp -m state --state NEW -m tcp --dport 754 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 2/sec -j ACCEPT
-A fail2ban-ssh -j RETURN
COMMIT
# Completed on Mon Nov 23 13:56:38 2015
